Agregar validaciones y evitar eliminación de ingredientes en uso