@@ -7,7 +7,6 @@ import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 
 import com.api.cocina.recetas.domain.Categoria;
-import com.api.cocina.recetas.domain.Ingrediente;
 import com.api.cocina.recetas.domain.Pasos;
 import com.api.cocina.recetas.domain.Receta;
 import com.api.cocina.recetas.domain.enums.Dificultad;
@@ -15,73 +14,98 @@ import com.api.cocina.recetas.dto.ingrediente.IngredienteSimpleDto;
 import com.api.cocina.recetas.dto.receta.RecetaDto;
 import com.api.cocina.recetas.dto.receta.RecetaResumenDto;
 import com.api.cocina.recetas.exceptions.RecetaNoEncontradaException;
+import com.api.cocina.recetas.exceptions.ResourceNotFoundException;
 import com.api.cocina.recetas.mappers.ingrediente.IngredienteMapper;
 import com.api.cocina.recetas.mappers.receta.RecetaMapper;
+import com.api.cocina.recetas.repository.categoria.CategoriaRepository;
 import com.api.cocina.recetas.repository.receta.RecetaRepository;
 import com.api.cocina.recetas.service.receta.RecetaService;
 
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class RecetaServiceImpl implements RecetaService {
 
-    private final RecetaMapper recetaMapper;
     private final RecetaRepository recetaRepository;
+    private final CategoriaRepository categoriaRepository;
+    private final RecetaMapper recetaMapper;
     private final IngredienteMapper ingredienteMapper;
-
-    public RecetaServiceImpl(RecetaMapper recetaMapper, RecetaRepository recetaRepository, IngredienteMapper ingredienteMapper) {
-        this.recetaMapper = recetaMapper;
-        this.recetaRepository = recetaRepository;
-        this.ingredienteMapper = ingredienteMapper;
-    }
 
     @Override
     public RecetaDto obtenerReceta(Long id) {
         Receta receta = recetaRepository.findById(id)
                 .orElseThrow(() -> new RecetaNoEncontradaException(id));
-        return recetaMapper.toDTO(receta);
+
+        return recetaMapper.toDto(receta);
     }
 
     @Override
     public List<RecetaDto> listarRecetas() {
-        return recetaRepository.findAll().stream()
-                .map(recetaMapper::toDTO)
-                .collect(Collectors.toList());
+        return recetaRepository.findAll()
+                .stream()
+                .map(recetaMapper::toDto)
+                .toList();
     }
 
     @Override
     public RecetaDto crearReceta(RecetaDto recetaDto) {
-        Objects.requireNonNull(recetaDto, "RecetaDto no puede ser null");
-        Receta receta = recetaMapper.toEntity(recetaDto);
-        return recetaMapper.toDTO(recetaRepository.save(receta));
+        Objects.requireNonNull(recetaDto, "La receta no puede ser null");
+
+        Long categoriaId = Objects.requireNonNull(
+                recetaDto.categoriaId(),
+                "La categoría es obligatoria"
+        );
+
+        Categoria categoria = categoriaRepository.findById(categoriaId)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Categoría no encontrada con id " + categoriaId)
+                );
+
+        Receta receta = new Receta();
+        receta.setNombre(recetaDto.nombre());
+        receta.setDescripcion(recetaDto.descripcion());
+        receta.setDificultad(recetaDto.dificultad());
+        receta.setCategoria(categoria);
+
+        Receta guardada = recetaRepository.save(receta);
+        return recetaMapper.toDto(guardada);
     }
 
     @Override
-    public RecetaDto actualizarReceta(Long id, RecetaDto recetadto) {
+    public RecetaDto actualizarReceta(Long id, RecetaDto recetaDto) {
         Receta existente = recetaRepository.findById(id)
                 .orElseThrow(() -> new RecetaNoEncontradaException(id));
 
-        existente.setNombre(Objects.requireNonNull(recetadto.nombre(), "Nombre no puede ser null"));
-        existente.setDescripcion(Objects.requireNonNull(recetadto.descripcion(), "Descripcion no puede ser null"));
-        existente.setDificultad(Objects.requireNonNull(recetadto.dificultad(), "Dificultad no puede ser null"));
+        existente.setNombre(
+                Objects.requireNonNull(recetaDto.nombre(), "El nombre es obligatorio")
+        );
+        existente.setDescripcion(
+                Objects.requireNonNull(recetaDto.descripcion(), "La descripción es obligatoria")
+        );
+        existente.setDificultad(
+                Objects.requireNonNull(recetaDto.dificultad(), "La dificultad es obligatoria")
+        );
 
-        Categoria categoria = new Categoria();
-        categoria.setId(Objects.requireNonNull(recetadto.categoria(), "Categoria no puede ser null"));
+        Long categoriaId = Objects.requireNonNull(
+                recetaDto.categoriaId(),
+                "La categoría es obligatoria"
+        );
+
+        Categoria categoria = categoriaRepository.findById(categoriaId)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Categoría no encontrada con id " + categoriaId)
+                );
+
         existente.setCategoria(categoria);
 
-        Receta actualizada = recetaRepository.save(existente);
-        return recetaMapper.toDTO(actualizada);
+        return recetaMapper.toDto(recetaRepository.save(existente));
     }
 
     @Override
     public void eliminarReceta(Long id) {
         Receta receta = recetaRepository.findById(id)
                 .orElseThrow(() -> new RecetaNoEncontradaException(id));
-
-        receta.getPasos().forEach(paso -> {
-            List<Ingrediente> ingredientesASacar = paso.getIngredientes().stream()
-                    .filter(ingrediente -> ingrediente.getPasos().size() == 1)
-                    .toList();
-            paso.getIngredientes().removeAll(ingredientesASacar);
-        });
 
         recetaRepository.delete(receta);
     }
@@ -91,37 +115,36 @@ public class RecetaServiceImpl implements RecetaService {
         Receta receta = recetaRepository.findById(id)
                 .orElseThrow(() -> new RecetaNoEncontradaException(id));
 
-        return receta.getPasos().stream()
-                .flatMap(paso -> Objects.requireNonNull(paso.getIngredientes()).stream())
-                .map(ingredienteMapper::toSimpleDTO) // <-- usamos toSimpleDTO
+        return receta.getPasos()
+                .stream()
+                .flatMap(paso -> paso.getIngredientes().stream())
+                .map(ingredienteMapper::toSimpleDto)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<RecetaDto> listarRecetasPorDificultad(Dificultad dificultad) {
-        Objects.requireNonNull(dificultad, "Dificultad no puede ser null");
-        return recetaRepository.findByDificultad(dificultad).stream()
-                .map(recetaMapper::toDTO)
-                .collect(Collectors.toList());
+        Objects.requireNonNull(dificultad, "La dificultad no puede ser null");
+
+        return recetaRepository.findByDificultad(dificultad)
+                .stream()
+                .map(recetaMapper::toDto)
+                .toList();
     }
 
     @Override
     public List<RecetaResumenDto> listarRecetasPorCategoria(Long categoriaId) {
-        List<Receta> recetas = recetaRepository.findByCategoriaId(categoriaId);
-        return recetas.stream()
+        return recetaRepository.findByCategoriaId(categoriaId)
+                .stream()
                 .map(receta -> {
-                    int tiempoTotal = receta.getPasos().stream()
+                    int tiempoTotal = receta.getPasos()
+                            .stream()
                             .filter(p -> !Boolean.TRUE.equals(p.getOpcional()))
                             .mapToInt(Pasos::getTiempoEstimado)
                             .sum();
-                    return new RecetaResumenDto(
-                            receta.getId(),
-                            receta.getNombre(),
-                            receta.getDescripcion(),
-                            receta.getDificultad(),
-                            tiempoTotal
-                    );
+
+                    return recetaMapper.toResumenDto(receta, tiempoTotal);
                 })
                 .collect(Collectors.toList());
     }
@@ -131,11 +154,12 @@ public class RecetaServiceImpl implements RecetaService {
         Receta receta = recetaRepository.findById(recetaId)
                 .orElseThrow(() -> new RecetaNoEncontradaException(recetaId));
 
-        return receta.getPasos().stream()
+        return receta.getPasos()
+                .stream()
                 .filter(p -> p.getId().equals(pasoId))
                 .flatMap(p -> p.getIngredientes().stream())
-                .map(ingredienteMapper::toSimpleDTO)
-                .collect(Collectors.toList());
+                .map(ingredienteMapper::toSimpleDto)
+                .toList();
     }
 
     @Override
@@ -143,7 +167,8 @@ public class RecetaServiceImpl implements RecetaService {
         Receta receta = recetaRepository.findById(id)
                 .orElseThrow(() -> new RecetaNoEncontradaException(id));
 
-        return receta.getPasos().stream()
+        return receta.getPasos()
+                .stream()
                 .mapToInt(Pasos::getTiempoEstimado)
                 .sum();
     }
